--- a/src/components/Hero/GettingCertified/styles.module.scss
+++ b/src/components/Hero/GettingCertified/styles.module.scss
@@ -12,19 +12,11 @@ $breakpoints: (
 }
 
 .capsule {
-  padding: 4.4rem 0 5.2rem;
-
-  @include display-grid;
-  grid-template-columns: 1fr minmax(320px, 1024px) 1fr;
-
-  background-color: $color-offblack;
-  background-image: url('Images/getting-certified@2x.jpg');
-  background-position: center;
+  @extend .container;
 }
 
 .intro {
-  grid-column: 2 / 3;
-  padding-left: 2.4rem;
+  @extend .col-12;
 }
 
 .navigation {
@@ -39,7 +31,6 @@ $breakpoints: (
 }
 
 .title {
-  max-width: 82rem;
   font-size: 6.4rem;
   letter-spacing: 0.53px;
   margin-bottom: 2.4rem;
@@ -47,7 +38,6 @@ $breakpoints: (
 }
 
 .subtitle {
-  max-width: 74.3rem;
   margin-bottom: 5.6rem;
   font-size: 2.8rem;
   line-height: 4.2rem;
@@ -55,12 +45,7 @@ $breakpoints: (
 
 
 @include media('<lower-tablet') {
-  .capsule {
-    padding: 7.2rem 0 9.7rem;
-  }
-
   .title {
-    max-width: 61rem;
     font-size: 4.8rem;
     letter-spacing: 0.4px;
     line-height: 5.8rem;
